@@ -1,3 +1,10 @@
+2008-12-16  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_class_init,
+	  hd_bookmark_shortcut_init): Add shadow.
+	* src/hd-task-shortcut.c (hd_task_shortcut_class_init,
+	  hd_task_shortcut_init): Add shadow.
+
 2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_expose_event,
